# MRF_robotic_arm

./: .gitignore  README.md  guide.md  runner.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mrf_bringup/share/mrf_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mrf_coordinator/lib/mrf_coordinator/: conveyor  coordinator  object_manager
install/mrf_coordinator/share/mrf_coordinator/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mrf_description/share/mrf_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mrf_gazebo/share/mrf_gazebo/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  (+5 more)
log/: latest_build
src/mrf_bringup/: CMakeLists.txt  package.xml
src/mrf_bringup/launch/: mrf_sim.launch.py
src/mrf_coordinator/: package.xml  setup.cfg  setup.py
src/mrf_coordinator/mrf_coordinator/: conveyor.py  coordinator.py  ik.py  object_manager.py
src/mrf_description/: CMakeLists.txt  package.xml
src/mrf_description/config/: controllers.yaml
src/mrf_description/urdf/: kr_arm.xacro  robot.urdf.xacro
src/mrf_gazebo/: CMakeLists.txt
src/mrf_gazebo/worlds/: mrf_sorting.world
src/mrf_msgs/: CMakeLists.txt  package.xml
src/mrf_perception/: package.xml  setup.cfg  setup.py
src/mrf_perception/mrf_perception/: perception.py
(+147 files in other folders)
