<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mrf_perception</name>
  <version>0.1.0</version>
  <description>Simulated perception layer (ground-truth mode) for the MRF sim.</description>
  <maintainer email="sairajesh@avartanlabs.com">sairajesh</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>mrf_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
